<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GuessNum">

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/neodgm"
        android:text="리셋"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="#A497FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:fontFamily="@font/neodgm"
        android:text="시작"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="#A497FF"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTryCount"
        app:layout_constraintVertical_bias="0.69"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/neodgm"
        android:text="@string/guess_number"
        android:textColor="@android:color/holo_green_light"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextInputNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTryCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/neodgm"
        android:text="@string/try_count"
        android:textColor="#A497FF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <EditText
        android:id="@+id/editTextInputNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:fontFamily="@font/neodgm"
        android:gravity="center"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="none|number"
        android:minHeight="48dp"
        android:text="@string/input_number"
        android:textColor="@android:color/holo_green_light"
        android:textColorHint="#A497FF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/neodgm"
        android:text="@string/text_view_hint"
        android:textColor="#A497FF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTryCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/neodgm"
        android:text="업다운 게임"
        android:textColor="#A497FF"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <ImageView
        android:id="@+id/Down"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/down" />

    <ImageView
        android:id="@+id/Up"
        android:layout_width="120dp"
        android:layout_height="105dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/up" />

    <ImageView
        android:id="@+id/Ok"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ok" />

</androidx.constraintlayout.widget.ConstraintLayout>